Prevent layout shift caused by scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@
 
 html {
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
 }
 
 
